--- a/jest.config.json
+++ b/jest.config.json
@@ -3,13 +3,21 @@
   "collectCoverage": true,
   "collectCoverageFrom": [
     "src/**/*.js",
-    "!src/server.js"
+    "!src/server.js",
+    "!src/config/database.js"
   ],
   "coverageDirectory": "coverage",
-  "coverageReporters": ["text", "lcov"],
+  "coverageReporters": ["text", "lcov", "html"],
+  "coverageThreshold": {
+    "global": {
+      "branches": 70,
+      "functions": 70,
+      "lines": 70,
+      "statements": 70
+    }
+  },
   "testMatch": [
-    "**/__tests__/**/*.js",
-    "**/tests/**/*.js",
-    "**/?(*.)+(spec|test).js"
-  ]
+    "**/tests/**/*.test.js"
+  ],
+  "setupFilesAfterEnv": ["<rootDir>/tests/setup.js"]
 }
