fix: correction erreurs eslint&workflow  pour validation finale

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
     
     - name: Run ESLint
       run: |
-        npx eslint src/ scripts/ tests/ --ext .js
+        npx eslint .
         if [ $? -ne 0 ]; then
           echo "ESLint errors found - build failed"
           exit 1
