--- a/jest.config.json
+++ b/jest.config.json
@@ -16,8 +16,6 @@
       "statements": 0
     }
   },
-  "testMatch": [
-    "**/tests/**/*.test.js"
-  ],
+  "testMatch": ["**/tests/**/*.test.js"],
   "setupFilesAfterEnv": ["<rootDir>/tests/setup.js"]
 }
